infra/k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prodavan
  labels:
    app.kubernetes.io/part-of: prodavan
